Fix canvas distortion during resize

--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -3,16 +3,15 @@
     padding: 0;
     box-sizing: border-box;
     text-align: center;
-    font-family:'Courier New', Courier, monospace;
+    font-family: monospace;
 }
 
 #div-container {
-    width: 600px;
-    height: 600px;
-    border: 2px solid black;
+    border: 3px solid black;
     display: grid;
     box-shadow: 25px 25px black;
     border-radius: 3px;
+    margin: 0 10px;
 }
 
 
